Fixed some code that was incompatible with Java 1.4 Committers, please watch out for this when applying fixes to the release branch
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/branches/release4.0@542435 13f79535-47bb-0310-9956-ffa450edef68